--- a/helm/chronos/values.yaml
+++ b/helm/chronos/values.yaml
@@ -42,7 +42,8 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
+  annotations:
+    kubernetes.io/ingress.class: haproxy
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
