--- a/helm/rest/values.yaml
+++ b/helm/rest/values.yaml
@@ -42,7 +42,8 @@ service:
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations:
+    kubernetes.io/ingress.class: haproxy
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
