--- a/helm/retriever/templates/deployment.yaml
+++ b/helm/retriever/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: KAFKA_SERVER
-              value: "kafka:9092"
+              value: "kafka-cluster-1-kafka-bootstrap.kafka:9092"
             - name: SERVER_PORT
               value: "8080"
           ports:
