--- a/helm/xml-retriever/values.yaml
+++ b/helm/xml-retriever/values.yaml
@@ -1,11 +1,11 @@
-# Default values for chronos.
+# Default values for retriever.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: rafaelostertag/funnel-chronos
+  repository: rafaelostertag/funnel-xml-retriever
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -56,10 +56,8 @@ ingress:
 
 resources:
    limits:
-     cpu: 500m
      memory: 256Mi
    requests:
-     cpu: 250m
      memory: 128Mi
 
 autoscaling:
