--- a/helm/notifier/templates/deployment.yaml
+++ b/helm/notifier/templates/deployment.yaml
@@ -35,24 +35,22 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: KAFKA_SERVER
+            - name: KAFKA_BOOTSTRAP_SERVERS
               value: "kafka-cluster-1-kafka-bootstrap.kafka:9092"
-            - name: SMTP_SERVER
-              value: "colossus.kruemel.home"
-            - name: SERVER_PORT
-              value: "8080"
+            - name: QUARKUS_MAILER_START_TLS
+              value: "DISABLED"
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /info
+              path: /q/health/live
               port: http
             initialDelaySeconds: 60
           readinessProbe:
             httpGet:
-              path: /info
+              path: /q/health/ready
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
